--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,32 +8,40 @@ jobs:
   test:
     name: tests & lint
     runs-on: ubuntu-latest
-    env:
-      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     steps:
-      - uses: actions/checkout@v5
+    - uses: actions/checkout@v5
 
-      - name: Set up Python
-        uses: actions/setup-python@v6
-        with:
-          python-version-file: .python-version
+    - name: Set up Python
+      uses: actions/setup-python@v6
+      with:
+        python-version-file: .python-version
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v6
-        with:
-          version: "0.8.15"
+    - name: Install uv
+      uses: astral-sh/setup-uv@v6
+      with:
+        version: "0.8.15"
 
-      - name: Sync deps
-        run: uv sync --all-extras
+    - name: Sync deps
+      run: uv sync --all-extras
 
-      - name: Ruff lint
-        run: uv run ruff check .
+    - name: Ruff lint
+      run: uv run ruff check .
 
-      - name: Ruff format (check)
-        run: uv run ruff format --check .
+    - name: Ruff format (check)
+      run: uv run ruff format --check .
 
-      - name: Pyright
-        run: uv run pyright
+    - name: Pyright
+      run: uv run pyright
 
-      - name: Pytest
-        run: uv run pytest -q
+    - name: Pytest
+      run: uv run pytest -q
+      env:
+        SUPABASE_URL: https://test.supabase.co
+        SUPABASE_KEY: test-supabase-key
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        REDIS_URL: redis://localhost:6379
+        TIGRIS_ENDPOINT: https://test.tigris.com
+        TIGRIS_REGION: auto
+        TIGRIS_ACCESS_KEY: test-access-key
+        TIGRIS_SECRET_KEY: test-secret-key
+        TIGRIS_BUCKET: test-bucket
