--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ dependencies = [
   "openai>=1.99.2,<2",
   "uvicorn[standard]==0.35.0",
   "fastapi",
+  "supabase>=2.18.1",
+  "boto3>=1.40.25",
+  "redis>=6.4.0",
+  "datamodel-code-generator>=0.33.0",
+  "openapi-spec-validator>=0.7.2",
 ]
 
 [project.optional-dependencies]
