--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,8 @@ jobs:
         SUPABASE_KEY: test-supabase-key
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         REDIS_URL: redis://localhost:6379
-        TIGRIS_ENDPOINT: https://test.tigris.com
-        TIGRIS_REGION: auto
-        TIGRIS_ACCESS_KEY: test-access-key
-        TIGRIS_SECRET_KEY: test-secret-key
-        TIGRIS_BUCKET: test-bucket
+        AWS_ENDPOINT_URL_S3: https://test.tigris.com
+        AWS_ACCESS_KEY_ID: test-access-key
+        AWS_SECRET_ACCESS_KEY: test-secret-key
+        BUCKET_NAME: test-bucket
+        AWS_REGION: auto
