--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
     rev: v1.1.405
     hooks:
       - id: pyright
-        args: [--project, pyproject.toml, src/calorie_track_ai_bot]
+        args: [--project, backend/pyproject.toml, backend/src/calorie_track_ai_bot]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
@@ -23,7 +23,7 @@ repos:
     hooks:
       - id: pytest
         name: pytest (quick)
-        entry: uv run pytest -q
+        entry: cd backend && uv run pytest -q
         language: system
         pass_filenames: false
         stages: [pre-push]
