--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "@telegram-apps/sdk": "^1.0.0",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.7",
     "i18next": "^23.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^7.9.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.0",
@@ -28,7 +30,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "playwright": "^1.47.1",
     "typescript": "^5.5.4",
-    "vite": "^5.4.2",
-    "vitest": "^2.0.5"
+    "vite": "^7.1.6",
+    "vitest": "^3.2.4"
   }
 }
