--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -6,6 +6,10 @@ on:
   push:
     tags: [ 'v*' ]
 
+defaults:
+  run:
+    working-directory: backend
+
 jobs:
   fly-deploy:
     if: ${{ github.event.workflow_run.conclusion == 'success' || startsWith(github.ref, 'refs/tags/v') }}
