--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -20,9 +20,9 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v5
       with:
-        node-version-file: '.nvmrc'
+        node-version-file: 'frontend/.nvmrc'
         cache: 'npm'
-        cache-dependency-path: 'package-lock.json'
+        cache-dependency-path: 'frontend/package-lock.json'
 
     - name: Install dependencies
       run: npm ci
