fix frontend deploy

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -37,4 +37,4 @@ jobs:
         VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
       run: |
-        cd frontend && vercel --prod --token $VERCEL_TOKEN
+        vercel --prod --token $VERCEL_TOKEN
