--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@telegram-apps/sdk": "^1.0.0",
     "@types/uuid": "^10.0.0",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.7.7",
     "i18next": "^23.11.5",
