--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -1,9 +1,10 @@
 name: Backend Deploy
 on:
-  workflow_run:
-    workflows: [ Backend Build ]
-    types: [ completed ]
   push:
+    branches: [ main ]
+    paths:
+      - 'backend/**'
+      - '.github/workflows/backend-deploy.yml'
     tags: [ 'v*' ]
 
 defaults:
@@ -12,7 +13,7 @@ defaults:
 
 jobs:
   fly-deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' || startsWith(github.ref, 'refs/tags/v') }}
+    if: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v5
