--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -1,11 +1,14 @@
 name: Backend Deploy
 on:
-  push:
+  workflow_run:
+    workflows: ["Backend Build"]
+    types: [completed]
     branches: [ main ]
+  push:
+    tags: [ 'v*' ]
     paths:
       - 'backend/**'
       - '.github/workflows/backend-deploy.yml'
-    tags: [ 'v*' ]
 
 defaults:
   run:
@@ -13,7 +16,7 @@ defaults:
 
 jobs:
   fly-deploy:
-    if: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v5
