--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -1,15 +1,18 @@
 name: Frontend Deploy
 on:
-  push:
+  workflow_run:
+    workflows: ["Frontend CI"]
+    types: [completed]
     branches: [ main ]
+  push:
+    tags: [ 'v*' ]
     paths:
       - 'frontend/**'
       - '.github/workflows/frontend-deploy.yml'
-    tags: [ 'v*' ]
 
 jobs:
   vercel-deploy:
-    if: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v5
