--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,10 @@ dependencies = [
   "httpx>=0.27.0",
   "datamodel-code-generator>=0.33.0",
   "openapi-spec-validator>=0.7.2",
+  # Structured logging dependencies
+  "structlog>=24.4.0",
+  "python-json-logger>=2.0.7",
+  "uuid-utils>=0.9.0",
 ]
 
 [project.optional-dependencies]
@@ -30,6 +34,9 @@ dev = [
 test = [
   "pytest",
   "pytest-asyncio",
+  "pytest-watch",
+  "pytest-cov",
+  "psutil>=6.0.0",
 ]
 
 [build-system]
@@ -86,6 +93,11 @@ venv = ".venv"
 typeCheckingMode = "basic"
 reportMissingImports = true
 reportOptionalMemberAccess = "warning"
-reportUnknownMemberType = "warning"
+reportUnknownMemberType = "information"  # Reduce noise from external libraries
+reportArgumentType = "error"
+reportAttributeAccessIssue = "error"
 useLibraryCodeForTypes = true
 extraPaths = [".venv/lib/python3.12/site-packages"]
+# Ignore specific external library issues
+reportUnknownVariableType = "information"
+reportUnknownArgumentType = "information"
