--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -1,7 +1,7 @@
 name: Backend Deploy
 on:
   workflow_run:
-    workflows: ["Backend Build"]
+    workflows: ["Backend Build", "Supabase Migrations"]
     types: [completed]
     branches: [ main ]
   push:
