--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -43,14 +43,10 @@ test = [
 requires = ["uv_build>=0.8.15,<0.9.0"]
 build-backend = "uv_build"
 
-# [tool.uv.build-backend]
-# source-include = ["src/calorie_track_ai_bot/bot/locales/**"]
-
 [tool.ruff]
 line-length = 100
 target-version = "py312"
 fix = true
-exclude = ["src/calorie_track_ai_bot/migrations/"]
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "B", "UP", "RUF"]
@@ -93,11 +89,9 @@ venv = ".venv"
 typeCheckingMode = "basic"
 reportMissingImports = true
 reportOptionalMemberAccess = "warning"
-reportUnknownMemberType = "information"  # Reduce noise from external libraries
+reportUnknownMemberType = "information"
 reportArgumentType = "error"
 reportAttributeAccessIssue = "error"
 useLibraryCodeForTypes = true
-extraPaths = [".venv/lib/python3.12/site-packages"]
-# Ignore specific external library issues
 reportUnknownVariableType = "information"
 reportUnknownArgumentType = "information"
