--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,7 @@ repos:
     rev: v6.0.0
     hooks:
       - id: end-of-file-fixer
+        exclude: '(tsconfig\.tsbuildinfo|\.tsbuildinfo)$'
       - id: trailing-whitespace
       - id: check-merge-conflict
 
