--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,11 +25,13 @@ dependencies = [
   "uuid-utils>=0.9.0",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
   "pre-commit",
-  "ruff",
   "pyright",
+  "ruff",
+  "tabulate>=0.9.0",
+  {include-group = "test"}
 ]
 test = [
   "pytest",
