add feedback form

--- a/backend/env.template
+++ b/backend/env.template
@@ -67,6 +67,12 @@ TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 USE_WEBHOOK=false
 WEBHOOK_URL=https://your-domain.com/api/v1/bot/webhook
 
+# Admin Notification Configuration (Feature 005: Feedback System)
+# Telegram chat ID or channel ID for receiving feedback notifications
+# Get by: 1) Add bot to chat/channel, 2) Send a message, 3) Check https://api.telegram.org/bot<TOKEN>/getUpdates
+ADMIN_NOTIFICATION_CHAT_ID=-1001234567890  # Replace with your actual chat/channel ID
+FEEDBACK_NOTIFICATIONS_ENABLED=true
+
 # =============================================================================
 # OPENAI CONFIGURATION
 # =============================================================================
