--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,15 @@
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
+    "i18n:validate": "node src/i18n/validate-keys.mjs",
     "test": "node test-ci.js",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
+    "test:ui-ux": "playwright test tests/e2e/ui-ux-validation.spec.ts tests/e2e/accessibility.spec.ts",
+    "test:accessibility": "playwright test tests/e2e/accessibility.spec.ts",
+    "test:performance": "playwright test tests/e2e/ui-ux-validation.spec.ts --grep @performance",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:ui": "playwright test --ui",
@@ -52,18 +56,20 @@
     "react-dom": "^19.1.1",
     "react-i18next": "^16.0.0",
     "react-router-dom": "^7.9.1",
+    "recharts": "^3.3.0",
     "swiper": "^11.2.10",
     "uuid": "^13.0.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.0",
     "@eslint/js": "^9.36.0",
     "@jest/globals": "^30.1.2",
     "@playwright/test": "^1.55.0",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.5.2",
+    "@types/node": "^24.9.2",
     "@types/react": "^19.1.15",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
@@ -74,6 +80,7 @@
     "jsdom": "^27.0.0",
     "msw": "^2.11.3",
     "playwright": "^1.47.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.6",
