--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -16,9 +16,9 @@ primary_region = 'lax'
   processes = ["api"]
   protocol = 'tcp'
   internal_port = 8080
-  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
+  auto_stop_machines = 'suspend'
+  min_machines_running = 0
 
   [[services.ports]]
     port = 80
