--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,46 +44,49 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@telegram-apps/sdk": "^3.11.5",
+    "@telegram-apps/sdk": "^3.11.8",
     "@types/uuid": "^10.0.0",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
-    "@vitest/ui": "^3.2.4",
-    "axios": "^1.7.7",
-    "i18next": "^25.5.2",
-    "react": "^19.1.1",
-    "react-day-picker": "^9.11.0",
-    "react-dom": "^19.1.1",
-    "react-i18next": "^16.0.0",
-    "react-router-dom": "^7.9.1",
-    "recharts": "^3.3.0",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
+    "@vitest/ui": "^4.0.18",
+    "axios": "^1.13.5",
+    "i18next": "^25.8.5",
+    "react": "^19.2.4",
+    "react-day-picker": "^9.13.2",
+    "react-dom": "^19.2.4",
+    "react-i18next": "^16.5.4",
+    "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0",
     "swiper": "^11.2.10",
     "uuid": "^13.0.0",
-    "zod": "^4.1.11"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@axe-core/playwright": "^4.11.0",
-    "@eslint/js": "^9.36.0",
+    "@axe-core/playwright": "^4.11.1",
+    "@eslint/js": "^9.39.2",
     "@jest/globals": "^30.1.2",
-    "@playwright/test": "^1.55.0",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
+    "@playwright/test": "^1.58.2",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.9.2",
-    "@types/react": "^19.1.15",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "eslint": "^9.36.0",
+    "@types/node": "^25.2.3",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.4",
+    "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "jsdom": "^27.0.0",
-    "msw": "^2.11.3",
-    "playwright": "^1.47.1",
+    "eslint-plugin-react-refresh": "^0.4.26",
+    "globals": "^16.5.0",
+    "jsdom": "^27.4.0",
+    "msw": "^2.12.10",
+    "playwright": "^1.58.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.12",
-    "vitest": "^3.2.4"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.55.0",
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18"
+  },
+  "overrides": {
+    "valibot": "^1.2.0"
   }
 }
