--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,7 +1,6 @@
 [tool:pytest]
 env =
-    SUPABASE_URL=https://test.supabase.co
-    SUPABASE_KEY=test-supabase-key
+    DATABASE_URL=postgresql://test:test@localhost:5432/testdb
     OPENAI_API_KEY=test-openai-key
     REDIS_URL=redis://localhost:6379
     AWS_ENDPOINT_URL_S3=https://test.tigris.com
