--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,11 +17,8 @@ INLINE_BURST_RPS=5
 OPENAI_API_KEY=sk-your-openai-key
 OPENAI_MODEL=gpt-5-mini
 
-# Supabase
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_KEY=your-service-key
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
-SUPABASE_DB_PASSWORD=your-db-password
+# Database (Neon PostgreSQL)
+DATABASE_URL=postgresql://user:password@host/dbname?sslmode=require
 
 # Redis
 REDIS_URL=redis://localhost:6379
