--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,12 +8,11 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-  "psycopg[binary]==3.3.2",
+  "psycopg[binary,pool]>=3.3.2",
   "python-dotenv==1.2.1",
   "openai>=2,<3",
   "uvicorn[standard]==0.40.0",
   "fastapi",
-  "supabase>=2.18.1",
   "boto3>=1.40.25",
   "redis>=6.4.0",
   "httpx>=0.27.0",
